--- a/public/style.css
+++ b/public/style.css
@@ -75,15 +75,25 @@ section.chat__section {
     position: absolute;
     font-size: 20px;
     padding: 0 15px;
-
+    background-color: rgb(80, 223, 135);
+    color: black;
+    border-radius: 7px;
+    margin-left: 5px;
 }
 #join1{
     position: absolute;
     font-size: 20px;
     padding: 0 15px;
-
+    background-color: rgb(80, 223, 135);
+    color: black;
+    border-radius: 7px;
+    margin-left: 5px;
 }
 #room{
-    outline: #333;
-    width: 50%;
+    width: 100%;
+    border: none;
+    padding: 20px;
+    font-size: 16px;
+    outline: none;
+    background: #FBFBFB;
 }
